--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'com.robertlevonyan.view:MaterialChipView:1.2.4'
 }
